[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/ink/main.ink" type="Resource" id=1]
[ext_resource path="res://assets/scripts/ui/dialogue_box.gd" type="Script" id=2]
[ext_resource path="res://assets/alpha/sprites_alpha/characters/portraits/suwan_dream.png" type="Texture" id=3]
[ext_resource path="res://addons/paulloz.ink/InkPlayer.cs" type="Script" id=4]
[ext_resource path="res://assets/alpha/sprites_alpha/characters/portraits/nick_dream.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/prefabs/dialoguebox_entrychoices.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/prefabs/dialoguebox_entrydialogue.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sprites/characters/portraits/portrait_nour_neutral.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/themes/theme_dialogueBox.tres" type="Theme" id=9]
[ext_resource path="res://assets/scripts/ui/color_manager.gd" type="Script" id=10]
[ext_resource path="res://assets/sprites/characters/portraits/portrait_placeholder.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/characters/portraits/portrait_rina_neutral.png" type="Texture" id=12]

[sub_resource type="Gradient" id=1]

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
fill_from = Vector2( 1, 0.1 )
fill_to = Vector2( 1, 0.2 )

[node name="DialogueBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )
script = ExtResource( 2 )
typewriter_speed = 2

[node name="InkPlayer" type="Node" parent="."]
script = ExtResource( 4 )
autoLoadStory = true
story = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.643
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.28003
margin_right = -16.0
margin_bottom = -10.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_left = -0.160644
anchor_top = 0.045283
anchor_right = 0.973421
anchor_bottom = 0.965679
margin_left = -1.0236
margin_right = -1.06943
margin_bottom = 0.189972
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer"]
margin_right = 381.0
margin_bottom = 488.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer"]
light_mask = 9
margin_right = 365.0
margin_bottom = 488.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="RichTextLabel" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer" instance_placeholder="res://assets/ui/prefabs/dialoguebox_entrynormal.tscn"]
margin_top = 37.0
margin_right = 365.0
margin_bottom = 133.0

[node name="DialogueEntryChoices" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 153.0
margin_right = 365.0
margin_bottom = 292.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DialogueEntry" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 7 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 365.0
margin_bottom = 451.0

[node name="Light2D" type="Light2D" parent="Panel"]
visible = false
position = Vector2( 136.657, 279.563 )
scale = Vector2( 8.2832, 8.70117 )
texture = SubResource( 2 )
mode = 3
range_item_cull_mask = 8

[node name="ColorManager" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )
characterColors = {
"???": Color( 1, 1, 1, 1 ),
"brody": Color( 0.462745, 0.6, 0.741176, 1 ),
"chad": Color( 0.647059, 0.85098, 0.345098, 1 ),
"clerk": Color( 0.8, 0.403922, 1, 1 ),
"kannika": Color( 0.380392, 0.670588, 1, 1 ),
"kid amogus": Color( 1, 0.52549, 0.858824, 1 ),
"kristy": Color( 1, 0.52549, 0.858824, 1 ),
"ms suwan": Color( 0.380392, 0.670588, 1, 1 ),
"ms. suwan": Color( 0.380392, 0.670588, 1, 1 ),
"nick": Color( 0.88, 0.78, 0.38, 1 ),
"nour": Color( 0.78, 0.38, 0.38, 1 ),
"rina": Color( 1, 0.439216, 0.67451, 1 ),
"the party": Color( 1, 1, 1, 1 )
}
characterPortraits = {
"ms. suwan": ExtResource( 3 ),
"nick": ExtResource( 5 ),
"nour": ExtResource( 8 ),
"placeholder": ExtResource( 11 ),
"rina": ExtResource( 12 )
}
